# py-grpc-profile

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
example/: Makefile  async_client.py  async_server.py  client.py  server.py
example/echo/: echo_pb2.py  echo_pb2_grpc.py
example/proto/echo/: echo.proto
grpc_profile/server/: interceptor.py
py_grpc_profile/: __init__.py
py_grpc_profile/adapter/: __init__.py  cprofile_adapter.py  interfaces.py
py_grpc_profile/aio/server/: interceptor.py
py_grpc_profile/server/: interceptor.py
tests/: conftest.py  test_py_grpc_profile.py
tests/aio/server/: test_interceptor.py
tests/server/: test_interceptor.py
